--- a/weather.html
+++ b/weather.html
@@ -7,13 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <form onsubmit="storeProducts(event)" id="product">
-            <input  type="text" id="name"/>
-            <input type=""/>
-            <input />
- 
-        </form>
-    </div>
+    <h1>hello</h1>
+    <input type="text" id="city" oninput="getData()"/>
+    <button onclick="getWeather()">click </button>
+    <div id="container"></div>
 </body>
+<script src="weather.js"></script>
 </html>
