--- a/Oops/index.html
+++ b/Oops/index.html
@@ -7,13 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <form onsubmit="storeProducts(event)" id="product">
-            <input  type="text" id="name"/>
-            <input type=""/>
-            <input />
- 
-        </form>
-    </div>
+    <h1>Object Oriented Programming</h1>
 </body>
+
+<script src="es6class.js"></script>
 </html>
